Add small message

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 Below you will find what i personally find as my most educational projects.
                 <br>For more go to my <a rel="Github" href="https://github.com/nicodmt">Github</a> where i have more
                 projects i am proud of.</p>
+                <br>
+                <br>Most of my projects are private! To view them contact me and we'll talk trough Teams or other services.
             </div>
           </div>
           <!-- Brown bg -->
