Update UX on mobile

--- a/index.html
+++ b/index.html
@@ -39,11 +39,8 @@
             <div class="tm-welcome-left">
               <h2 class="tm-welcome-title">Welcome to my portfolio page</h2>
               <p class="pb-0">
-                Below you will find what i personally find as my most educational projects.
-                <br>For more go to my <a rel="Github" href="https://github.com/nicodmt">Github</a> where i have more
+                Below you will find what i personally find as my most educational projects. For more go to my <a rel="Github" href="https://github.com/nicodmt">Github</a> where i have more
                 projects i am proud of.</p>
-                <br>
-                <br>Most of my projects are private! To view them contact me and we'll talk trough Teams or other services.
             </div>
           </div>
           <!-- Brown bg -->
@@ -51,9 +48,7 @@
             <div class="tm-welcome-right">
               <img class="tm-welcome-icon" src="img/nicolas_dumont_icon.png" alt="Nicolas Dumont small icon"></img>
               <p class="mb-0">
-                I am ambitious and driven. I thrive on challenge and constantly set goals for myself, so I have
-                something to strive toward. I’m not comfortable with settling, and I’m always looking for an opportunity
-                to do better and achieve greatness.
+                I am ambitious and driven. I thrive on challenge and constantly set goals for myself, so I can always do better and achieve greatness.
               </p>
             </div>
           </div>
@@ -171,7 +166,7 @@
           <form id="tmContactForm" class="tm-bg-white-transparent">
             <div class="form-group">
               <div class="text-center">
-                <h4>Because of spam e-mail i have chosen to take away the form.</h4>
+                <h4>Because of spam email i have chosen to take away the form.</h4>
                 <p>Click <a href="mailto:nicolas.dumont@hotmail.se">HERE</a> to get in touch!</p>
               </div>
             </div>
