--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="tm-brand-container text-center">
               <h1 class="tm-brand-name">Nicolas Dumont</h1>
               <p class="tm-brand-description mb-0">Soon to be system engineer</p>
+              <button><a href="page2.html">Page 2 test</a></button>
             </div>
           </div>
         </div>
