--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <div class="tm-brand-container text-center">
               <h1 class="tm-brand-name">Nicolas Dumont</h1>
               <p class="tm-brand-description mb-0">Soon to be system engineer</p>
-              <button><a href="page2.html">Page 2 test</a></button>
             </div>
           </div>
         </div>
@@ -40,7 +39,8 @@
             <div class="tm-welcome-left">
               <h2 class="tm-welcome-title">Welcome to my portfolio page</h2>
               <p class="pb-0">
-                Below you will find what i personally find as my most educational projects. For more go to my <a rel="Github" href="https://github.com/nicodmt">Github</a> where i have more
+                Below you will find what i personally find as my most educational projects. For more go to my <a
+                  rel="Github" href="https://github.com/nicodmt">Github</a> where i have more
                 projects i am proud of.</p>
             </div>
           </div>
@@ -49,7 +49,8 @@
             <div class="tm-welcome-right">
               <img class="tm-welcome-icon" src="img/nicolas_dumont_icon.png" alt="Nicolas Dumont small icon"></img>
               <p class="mb-0">
-                I am ambitious and driven. I thrive on challenge and constantly set goals for myself, so I can always do better and achieve greatness.
+                I am ambitious and driven. I thrive on challenge and constantly set goals for myself, so I can always do
+                better and achieve greatness.
               </p>
             </div>
           </div>
@@ -173,6 +174,10 @@
             </div>
           </form>
         </div>
+      </div>
+
+      <div class="row">
+        <p class="text-center tm-footer-text"><a href="instagramPictures.html">Patrice</a></p>
       </div>
       <!-- row -->
       <div class="row">
