Link url 404 corrected

--- a/instagramPictures.html
+++ b/instagramPictures.html
@@ -17,7 +17,7 @@
         <nav>
             <img src="img/logo.png" class="logo" alt="logo">
             <div class="btn-group">
-                <a href="https://github.com/nicodmt/meteor-rain" class="btn">Github</a>
+                <a href="https://github.com/nicodmt/" class="btn">Github</a>
             </div>
         </nav>
         <div class="intro-content">
