--- a/index.html
+++ b/index.html
@@ -1,60 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap">
-    <title>Nicolas Dumont</title>
+    <title>Devrent</title>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <img class="logo" src="images/logo.png" alt="">
-            <ul>
-                <li><a href="https://www.github.com/nicodmt" class="github">Github</a></li>
-                <li><a href="index.html" class="active">home</a></li>
-                <li><a href="digitalClockWDate/clock.html">Clock</a></li>
-                <li><a href="rainbow/rainbowEffect.html">Rainbow</a></li>
-                <li><a href="qrGenerator/qrGenerator.html">QR Generator</a></li>
-                <li><a href="parallaxTilt/parallaxTilt.html">3D Tilt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="random-section">
-        <div class="card">
-            <div class="top-content">
-                <div class="profile-image">
-                    <img src="./images/nicolas.png" alt="">
-                </div>
-                <div class="top-bar">
-                    <a href="https://www.paypal.me/nicodmt"><img class="top-icons" src="./images/coffee.png" alt=""></a>
-                </div>
-            </div>
-            <div class="mid-content">
-                <div class="short-detail">
-                    <h3>NICOLAS DUMONT <img src="./images/check.png" alt=""></h3>
-                    <span>Software Developer</span>
-                    <p>I am ambitious and driven. I thrive on challenge and constantly set goals for myself, so I can
-                        always do better and achieve greatness.</p>
-                    <div class="follow-followers">
-                        <div><span>LOCATED</span>
-                            <p>Stockholm</p>
-                        </div>
-                        <div><span>WORK</span>
-                            <p>Remote</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="bottom-content">
-                <button><a href="mailto:nicolas.dumont@hotmail.se">CONTACT</a></button>
-            </div>
-        </div>
+    <div>
+        <class id = imgDiv>
+            <img src="img/d6x.png" alt="Devrent logotype" style="height: 20%; width: 100%; margin-top: 70%;">
+        </class>
+        
+        <h1>We're coming back...</h1>
     </div>
 </body>
-
 </html>
