--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 </head>
 <body>
     <div>
-        <class id = imgDiv>
-            <img src="img/d6x.png" alt="Devrent logotype" style="height: 45%; width: 100%;">
-        </class>
-        
-        <h1>We're coming back...</h1>
+        <h1>Something is around the corner...
+            <br>/CTO
+        </h1>
     </div>
 </body>
 </html>
