--- a/index.html
+++ b/index.html
@@ -4,16 +4,126 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <title>Devrent</title>
 </head>
 <body>
-    <div>
-        <h1>Something is around the corner...
-            <br>/CTO
-        </h1>
+    <div class="imgContainer">
+        <img src="img/d6x.png" alt="Devrent logo">
     </div>
+    <div class="demo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <div class="pricingTable">
+                        <div class="pricingTable-header">
+                            <h3 class="heading">UX/UI Design</h3>
+                            <span class="subtitle">Sketch, Figma, Adobe, FlowMapp, and more...</span>
+                            <div class="price-value">140 000
+                                <span class="currency">kr</span>
+                                <span class="month">/m</span>
+                            </div>
+                        </div>
+                        <ul class="pricing-content">
+                            <li>Support 24/7</li>
+                            <li>Pair of Senior & Junior</li>
+                            <li>Local/Remote/Hybrid</li>
+                            <li>Duration after your needs</li>
+                            <li>Complete secrecy</li>
+                        </ul>
+                        <a href="wip/coffee.html" class="read">See more<i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="pricingTable">
+                        <div class="pricingTable-header">
+                            <h3 class="heading">Developer</h3>
+                            <span class="subtitle">Frontend, Backend and Fullstack.</span>
+                            <div class="price-value">175 000
+                                <span class="currency">kr</span>
+                                <span class="month">/m</span>
+                            </div>
+                        </div>
+                        <ul class="pricing-content">
+                            <li>Support 24/7</li>
+                            <li>Pair of Senior & Junior</li>
+                            <li>Local/Remote/Hybrid</li>
+                            <li>Duration after your needs</li>
+                            <li>Complete secrecy</li>
+                        </ul>
+                        <a href="wip/coffee.html" class="read">See more<i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="pricingTable">
+                        <div class="pricingTable-header">
+                            <h3 class="heading">IT Architect</h3>
+                            <span class="subtitle">PlantUML, LucidChart, Archium and more...</span>
+                            <div class="price-value">300 000
+                                <span class="currency">kr</span>
+                                <span class="month">/m</span>
+                            </div>
+                        </div>
+                        <ul class="pricing-content">
+                            <li>Support 24/7</li>
+                            <li>Pair of Senior & Junior</li>
+                            <li>Local/Remote/Hybrid</li>
+                            <li>Duration after your needs</li>
+                            <li>Complete secrecy</li>
+                        </ul>
+                        <a href="wip/coffee.html" class="read">See more<i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="site-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 col-md-6">
+              <h6>About</h6>
+              <p class="text-justify">Devrent was founded in 2019 by a young Junior Developer that couldn't land a job because of all companies looking for developers with at least 5+ years of development. 
+                  Unfortunately, the pandemic hit and the company had to shut it's doors. Now we are back, stronger then ever with a team of 12 designers, developers and architects with experiences from Juniors to Seniors.
+                  We love to teach and help each other grow, we strongly welcome newly graduated with a hunger to build future applications. We have ALL been new, been trough the struggle and the impostor syndrome. Without Juniors, we won't have any Seniors...</p>
+            </div>
+  
+            <div class="col-xs-6 col-md-3">
+              <h6>Companies we've been at</h6>
+              <ul class="footer-links">
+                <li><a href="wip/coffee.html">Non disclosure agreements for now.</a></li>
+              </ul>
+            </div>
+  
+            <div class="col-xs-6 col-md-3">
+              <h6>Quick Links</h6>
+              <ul class="footer-links">
+                <li><a href="wip/coffee.html">About Us</a></li>
+                <li><a href="wip/coffee.html">Contact Us</a></li>
+                <li><a href="wip/coffee.html">Hiring</a></li>
+                <li><a href="wip/coffee.html">Privacy Policy</a></li>
+              </ul>
+            </div>
+          </div>
+          <hr>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+              <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by 
+           <a href="#">Devrent</a>.
+              </p>
+            </div>
+          </div>
+        </div>
+  </footer>
 </body>
 </html>
