Corrected spelling errors

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
           <div class="row">
             <div class="col-sm-12 col-md-6">
               <h6>About</h6>
-              <p class="text-justify">Devrent was founded in 2019 by a young Junior Developer that couldn't land a job because of all companies looking for developers with at least 5+ years of development. 
-                  Unfortunately, the pandemic hit and the company had to shut it's doors. Now we are back, stronger then ever with a team of 12 designers, developers and architects with experiences from Juniors to Seniors.
-                  We love to teach and help each other grow, we strongly welcome newly graduated with a hunger to build future applications. We have ALL been new, been trough the struggle and the impostor syndrome. Without Juniors, we won't have any Seniors...</p>
+              <p class="text-justify">Devrent was founded in 2019 by a young Junior Developer that couldn't land a job because of all companies looking for developers with at least 5+ years of development experience. 
+                  Unfortunately, the pandemic hit and the company had to shut its doors. Now we are back, stronger than ever with a team of 12 designers, developers and architects with experience from Juniors to Seniors.
+                  We love to teach and help each other grow; we strongly welcome newly graduated with a hunger to build future applications. We have ALL been new, been through the struggle and the impostor syndrome. Without Juniors, we won't have any Seniors...</p>
             </div>
   
             <div class="col-xs-6 col-md-3">
