--- a/index.html
+++ b/index.html
@@ -1,129 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
-    <title>Devrent</title>
-</head>
-<body>
-    <div class="imgContainer">
-        <img src="img/d6x.png" alt="Devrent logo">
-    </div>
-    <div class="demo">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="pricingTable">
-                        <div class="pricingTable-header">
-                            <h3 class="heading">UX/UI Design</h3>
-                            <span class="subtitle">Sketch, Figma, Adobe, FlowMapp, and more...</span>
-                            <div class="price-value">140 000
-                                <span class="currency">kr</span>
-                                <span class="month">/m</span>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Devrent</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+        <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+    </head>
+    <body>
+        <!-- Background Video-->
+        <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="assets/mp4/bg.mp4" type="video/mp4" /></video>
+        <!-- Masthead-->
+        <div class="masthead">
+            <div class="masthead-content text-white">
+                <div class="container-fluid px-4 px-lg-0">
+                    <h1 class="fst-italic lh-1 mb-4"><img src="img/d6x.png" alt="devrent logotype" style="height: 70px; width: 155px;"> is on it's way back!</h1>
+                    <p class="mb-5">We're working hard to finish the development of this site. Sign up below to receive updates and to be notified when we launch!</p>
+                    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                        <!-- Email address input-->
+                        <div class="row input-group-newsletter">
+                            <div class="col"><input class="form-control" id="email" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
+                            <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
+                        </div>
+                        <div class="invalid-feedback mt-2" data-sb-feedback="email:required">An email is required.</div>
+                        <div class="invalid-feedback mt-2" data-sb-feedback="email:email">Email is not valid.</div>
+                        <!-- Submit success message-->
+                        <!---->
+                        <!-- This is what your users will see when the form-->
+                        <!-- has successfully submitted-->
+                        <div class="d-none" id="submitSuccessMessage">
+                            <div class="text-center mb-3 mt-2">
+                                <div class="fw-bolder">Form submission successful!</div>
+                                <br />
                             </div>
                         </div>
-                        <ul class="pricing-content">
-                            <li>Support 24/7</li>
-                            <li>Pair of Senior & Junior</li>
-                            <li>Local/Remote/Hybrid</li>
-                            <li>Duration after your needs</li>
-                            <li>Complete secrecy</li>
-                        </ul>
-                        <a href="wip/coffee.html" class="read">See more<i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-                    <div class="pricingTable">
-                        <div class="pricingTable-header">
-                            <h3 class="heading">Developer</h3>
-                            <span class="subtitle">Frontend, Backend and Fullstack.</span>
-                            <div class="price-value">175 000
-                                <span class="currency">kr</span>
-                                <span class="month">/m</span>
-                            </div>
-                        </div>
-                        <ul class="pricing-content">
-                            <li>Support 24/7</li>
-                            <li>Pair of Senior & Junior</li>
-                            <li>Local/Remote/Hybrid</li>
-                            <li>Duration after your needs</li>
-                            <li>Complete secrecy</li>
-                        </ul>
-                        <a href="wip/coffee.html" class="read">See more<i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-                    <div class="pricingTable">
-                        <div class="pricingTable-header">
-                            <h3 class="heading">IT Architect</h3>
-                            <span class="subtitle">PlantUML, LucidChart, Archium and more...</span>
-                            <div class="price-value">300 000
-                                <span class="currency">kr</span>
-                                <span class="month">/m</span>
-                            </div>
-                        </div>
-                        <ul class="pricing-content">
-                            <li>Support 24/7</li>
-                            <li>Pair of Senior & Junior</li>
-                            <li>Local/Remote/Hybrid</li>
-                            <li>Duration after your needs</li>
-                            <li>Complete secrecy</li>
-                        </ul>
-                        <a href="wip/coffee.html" class="read">See more<i class="fa fa-angle-right"></i></a>
-                    </div>
+                        <!-- Submit error message-->
+                        <!---->
+                        <!-- This is what your users will see when there is-->
+                        <!-- an error submitting the form-->
+                        <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
+                    </form>
                 </div>
             </div>
         </div>
-    </div>
-    <footer class="site-footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12 col-md-6">
-              <h6>About</h6>
-              <p class="text-justify">Devrent was founded in 2019 by a young Junior Developer that couldn't land a job because of all companies looking for developers with at least 5+ years of development experience. 
-                  Unfortunately, the pandemic hit and the company had to shut its doors. Now we are back, stronger than ever with a team of 12 designers, developers and architects with experience from Juniors to Seniors.
-                  We love to teach and help each other grow; we strongly welcome newly graduated with a hunger to build future applications. We have ALL been new, been through the struggle and the impostor syndrome. Without Juniors, we won't have any Seniors...</p>
-            </div>
-  
-            <div class="col-xs-6 col-md-3">
-              <h6>Companies we've been at</h6>
-              <ul class="footer-links">
-                <li><a href="wip/coffee.html">Non disclosure agreements for now.</a></li>
-              </ul>
-            </div>
-  
-            <div class="col-xs-6 col-md-3">
-              <h6>Quick Links</h6>
-              <ul class="footer-links">
-                <li><a href="wip/coffee.html">About Us</a></li>
-                <li><a href="wip/coffee.html">Contact Us</a></li>
-                <li><a href="wip/coffee.html">Hiring</a></li>
-                <li><a href="wip/coffee.html">Privacy Policy</a></li>
-              </ul>
-            </div>
-          </div>
-          <hr>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 col-sm-6 col-xs-12">
-              <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by 
-           <a href="#">Devrent</a>.
-              </p>
-            </div>
-          </div>
-        </div>
-  </footer>
-</body>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    </body>
 </html>
