--- a/secret.html
+++ b/secret.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>WIP - secret contest</h1>
+<body style="background-color:black;">
+    <header><h1 style="text-align:center; color: #fff">Somewhere, something is hidden - good luck!</h1></header>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d178825.85179014565!2d18.073371233424865!3d59.35532971863725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssv!2sse!4v1658474241146!5m2!1ssv!2sse" width="100%" height="770" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <footer><h1 style="text-align:center; color: #fff">Can't find it? Ok.</h1></footer>
 </body>
 </html>
